// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> renders a modal has children 1`] = `
<Modal
  actions={
    Array [
      <Button
        flat={true}
        modal="close"
        node="button"
        waves="green"
      >
        Close
      </Button>,
    ]
  }
  bottomSheet={false}
  fixedFooter={false}
  header="Modal header"
  options={
    Object {
      "dismissible": true,
      "opacity": 0.4,
    }
  }
  trigger={
    <button>
      click
    </button>
  }
>
  <div>
    <button
      onClick={[Function]}
    >
      click
    </button>
    <div
      className="modal"
      id="modal_1"
    >
      <div
        className="modal-content"
      >
        <h4>
          Modal header
        </h4>
        <div>
          <h1>
            Hello
          </h1>
        </div>
      </div>
      <div
        className="modal-footer"
      >
        <Button
          flat={true}
          key=".0"
          modal="close"
          node="button"
          waves="green"
        >
          <button
            className="btn waves-effect waves-green btn-flat modal-close"
            disabled={false}
          >
            Close
          </button>
        </Button>
      </div>
    </div>
  </div>
</Modal>
`;

exports[`<Modal /> renders a trigger renders 1`] = `
<Modal
  actions={
    Array [
      <Button
        flat={true}
        modal="close"
        node="button"
        waves="green"
      >
        Close
      </Button>,
    ]
  }
  bottomSheet={false}
  fixedFooter={false}
  header="Modal header"
  options={
    Object {
      "dismissible": true,
      "opacity": 0.4,
    }
  }
  trigger={
    <button>
      click
    </button>
  }
>
  <div>
    <button
      onClick={[Function]}
    >
      click
    </button>
    <div
      className="modal"
      id="modal_4"
    >
      <div
        className="modal-content"
      >
        <h4>
          Modal header
        </h4>
        <div>
          <h1>
            Hello
          </h1>
        </div>
      </div>
      <div
        className="modal-footer"
      >
        <Button
          flat={true}
          key=".0"
          modal="close"
          node="button"
          waves="green"
        >
          <button
            className="btn waves-effect waves-green btn-flat modal-close"
            disabled={false}
          >
            Close
          </button>
        </Button>
      </div>
    </div>
  </div>
</Modal>
`;

exports[`<Modal /> without a trigger renders 1`] = `
<Modal
  actions={
    Array [
      <Button
        flat={true}
        modal="close"
        node="button"
        waves="green"
      >
        Close
      </Button>,
    ]
  }
  bottomSheet={false}
  fixedFooter={false}
  options={
    Object {
      "dismissible": true,
      "opacity": 0.4,
    }
  }
>
  <div>
    <div
      className="modal"
      id="modal_3"
    >
      <div
        className="modal-content"
      >
        <h4 />
        <div>
          <h1>
            Hello
          </h1>
        </div>
      </div>
      <div
        className="modal-footer"
      >
        <Button
          flat={true}
          key=".0"
          modal="close"
          node="button"
          waves="green"
        >
          <button
            className="btn waves-effect waves-green btn-flat modal-close"
            disabled={false}
          >
            Close
          </button>
        </Button>
      </div>
    </div>
  </div>
</Modal>
`;
